# chicken-map-alx

./: .gitignore  README.md  main.py  pyproject.toml  spec.md
.claude/: settings.local.json
scripts/: download-data.py  generate-map.py
